--- a/src/pages/ast-view/Page.module.scss
+++ b/src/pages/ast-view/Page.module.scss
@@ -1,25 +1,19 @@
 .AstViewPage {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-        'title' 'display' 'ast';
-    grid-gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 100%;
     min-height: 100%;
-
-
     max-width: none;
     padding-top: 0;
 
     &__title {
-        grid-area: title;
         text-align: center;
         font-size: 2rem;
         font-weight: bold;
     }
 
     &__display {
-        grid-area: display;
         overflow: hidden;
         box-shadow: 0 20px 47px 18px #505d6640;
         border-radius: 20px;
@@ -28,6 +22,6 @@
     }
 
     &__ast {
-        grid-area: ast;
+        display: block;
     }
 }
