--- a/src/widgets/navbar/Navbar.module.scss
+++ b/src/widgets/navbar/Navbar.module.scss
@@ -11,6 +11,14 @@
 
     &__item {
         display: inline-block;
-        margin-right: 1em;
+        margin: 0 0.5em;
+        padding: 0 0.5em;
+        transition: 0.3s;
+
+        :global(.active) {
+            font-weight: bold;
+            color: #007acc;
+            text-decoration: none;
+        }
     }
 }
