--- a/src/widgets/navbar/Navbar.module.scss
+++ b/src/widgets/navbar/Navbar.module.scss
@@ -6,14 +6,18 @@
         flex-direction: row;
         list-style: none;
         padding: 0;
-        margin: 0 20px;
+        margin: 0 5px;
     }
 
     &__item {
         display: inline-block;
-        margin: 0 0.5em;
-        padding: 0 0.5em;
+        margin: 0 0.25em;
+        padding: 0 0.25em;
         transition: 0.3s;
+
+        a {
+            transition: 0.3s;
+        }
 
         :global(.active) {
             font-weight: bold;
