--- a/src/widgets/tokens-view/TokensView.module.scss
+++ b/src/widgets/tokens-view/TokensView.module.scss
@@ -14,6 +14,10 @@
         &:hover {
             background-color: #e5e5e5;
         }
+
+        &_error {
+            background-color: #ffcccc;
+        }
     }
 
     &__type {
