fix(features/evaluate): разделение ошибок на ошибки парсинга и выполнения

--- a/src/widgets/calc-screen/component.module.scss
+++ b/src/widgets/calc-screen/component.module.scss
@@ -28,8 +28,12 @@
         text-align: end;
         transition: 0.3s;
 
-        &_error {
-            opacity: 0.5;
+        &_invalidExpression {
+            opacity: 0.3;
+        }
+
+        &_runtimeError {
+            color: #ff0000;
         }
     }
 }
